--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Fullstack dev!</title>
+    <title>Foolstack dev!</title>
   </head>
 
   <body>
