--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Foolstack dev!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Event Horizon</title>
   </head>
 
   <body>
